# nextepc-mec

./: API.md  Makefile.in  README.md  aclocal.m4  config.in  config.nice  configure.ac
api/mme/: WriteReplaceWarningRequest.json
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
lib/: Makefile.am  Makefile.in
lib/core/: Makefile.in
lib/core/src/: Makefile.in
lib/core/test/: Makefile.in
lib/fd/: Makefile.in
lib/freeDiameter-1.2.1/: Makefile.in  configure
lib/freeDiameter-1.2.1/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
lib/freeDiameter-1.2.1/extensions/: Makefile.in
lib/freeDiameter-1.2.1/extensions/dbg_msg_dumps/: Makefile.in
lib/freeDiameter-1.2.1/libfdcore/: Makefile.in  fdd.tab.h  lex.fdd.c
lib/freeDiameter-1.2.1/libfdproto/: Makefile.in
lib/gtp/: Makefile.in  gtp_message.c  gtp_message.h  gtp_types.c  gtp_types.h  gtp_xact.c  gtp_xact.h
lib/gtp/support/: gtp_tlv.py
lib/ipfw/: Makefile.in
lib/nas/: Makefile.in
lib/orcania/: Makefile.am  Makefile.in
lib/s1ap/: Makefile.in
lib/s1ap/asn1c/: Makefile.in
lib/ulfius/: Makefile.am  Makefile.in
lib/yder/: Makefile.am  Makefile.in
scripts/: delete_mec_ue  delete_mec_ue_all  delete_mec_ue_data.txt  post_mec_ue  post_mec_ue1  post_mec_ue2  post_mec_ue_data.txt
src/: Makefile.in  epc.c  mme.c
src/common/: Makefile.in
src/hss/: Makefile.in
src/mme/: Makefile.am  Makefile.in  emm_handler.c  esm_build.c  mme_context.c  mme_context.h  mme_event.c  mme_event.h  mme_gtp_path.c  mme_init.c  mme_oam.c  mme_oam.h  mme_s10_inf.c  mme_s10_inf.h  mme_s6a_handler.c  mme_sm.c  s1ap_handler.c
src/pcrf/: Makefile.in
src/pgw/: Makefile.in  pgw_context.h  pgw_ipfw.c  pgw_s5c_build.c
src/sgw/: Makefile.in
support/: Makefile.in
support/config/: Makefile.in  nextepc.conf.in
support/freeDiameter/: Makefile.in
support/logrotate/: Makefile.in
support/newsyslog/: Makefile.in
support/systemd/: Makefile.in
test/: Makefile.in  atconfig
webui/.next/: commons.js  main.js  manifest.js
(+11 files in other folders)
